# oh-my-grok

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-TW.md  SECURITY.md  omg_capabilities.lock.json  plugin.json  pyproject.toml  pytest.ini  requirements-dev.txt
agents/: omg-analyst.md  omg-architect.md  omg-code-reviewer.md  omg-critic.md  omg-debugger.md  omg-designer.md  omg-executor.md  omg-orchestrator.md  omg-qa-tester.md  omg-security-reviewer.md  omg-test-engineer.md  omg-verifier.md  omg-writer.md
docs/: README.md  README.zh-Hant.md  README.zh-TW.md  README.zh.md  RELEASE.md  RELEASE.zh-TW.md  RELEASE.zh.md  autopilot.md  autopilot.zh-Hant.md  autopilot.zh-TW.md  autopilot.zh.md  security-model.md  security-model.zh-TW.md  security-model.zh.md  skills.md  skills.zh-Hant.md  skills.zh-TW.md  skills.zh.md  workflows.md  workflows.zh-Hant.md  workflows.zh-TW.md  workflows.zh.md
hooks/: hooks.json
omg_cli/: __init__.py  acceptance.py  autopilot.py  canary_classify.py  capability_discovery.py  command_policy.py  compaction.py  compat.py  deny.py  doctor.py  dual_review.py  evidence.py  fanout.py  goals.py  guidance.py  hook_install.py  host_launcher.py  host_session.py  hud.py  integrate.py  interview.py  lsp_tools.py  madmax.py  main.py  modes.py  note.py  pipeline.py  project_memory.py  qa.py  ralplan.py  redaction.py  resume.py  review.py  runtime_events.py  session_recovery.py  setup_cmd.py  sidecar.py  state.py  tracker.py  uninstall_cmd.py  (+4 more)
plans/: 001-accept-strict-v2-lease.md  (+19 more)
(+267 files in other folders)
